fixed spacing issues

--- a/frontend/src/app/pages/intro/intro.component.css
+++ b/frontend/src/app/pages/intro/intro.component.css
@@ -8,14 +8,14 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     height: 100vh; 
     margin: 0;
 }
 
 /* Logo Styling */
 .logo-container {
-    margin-bottom: 20px; 
+    margin-top: 100px;
 }
 
 .logo {
